changed mouse and fixed bug with cropping a photo that had been partially erased.

--- a/web/styles/main.scss
+++ b/web/styles/main.scss
@@ -27,6 +27,7 @@ $grey-font-color: #D6DBDF;
 
 .pic-canvas {
   float: left;
+  cursor: none;
 }
 
 .sidebar {
